--- a/TechCareerCase/Base.lproj/Main.storyboard
+++ b/TechCareerCase/Base.lproj/Main.storyboard
@@ -41,18 +41,18 @@
                                                     </constraints>
                                                 </imageView>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="Ut5-4G-BpX">
-                                                    <rect key="frame" x="52.5" y="168" width="75.5" height="53"/>
+                                                    <rect key="frame" x="36" y="168" width="108" height="63.5"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="YemekAdi" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vP4-fK-n6B">
-                                                            <rect key="frame" x="0.0" y="0.0" width="75.5" height="20.5"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="108" height="27.5"/>
+                                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="23"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fiyati" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VlK-tl-ABc">
-                                                            <rect key="frame" x="17.5" y="32.5" width="40" height="20.5"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <nil key="textColor"/>
+                                                            <rect key="frame" x="28.5" y="39.5" width="51" height="24"/>
+                                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                                            <color key="textColor" red="0.94901960784313721" green="0.63137254901960782" blue="0.24313725490196078" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
@@ -66,6 +66,7 @@
                                                 <constraint firstItem="Ut5-4G-BpX" firstAttribute="centerX" secondItem="pD6-y8-eLG" secondAttribute="centerX" id="sbq-7x-aKR"/>
                                             </constraints>
                                         </collectionViewCellContentView>
+                                        <color key="backgroundColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <connections>
                                             <outlet property="yemekAdi" destination="vP4-fK-n6B" id="a6C-cD-Czm"/>
                                             <outlet property="yemekFiyati" destination="VlK-tl-ABc" id="phR-Fj-UQN"/>
@@ -86,7 +87,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="Yemekler" largeTitleDisplayMode="always" id="qJz-qd-PzH">
                         <barButtonItem key="rightBarButtonItem" title="Item" image="sepet" id="dQm-Wj-7vK">
-                            <color key="tintColor" red="0.99607843137254903" green="0.7803921568627451" blue="0.37647058823529411" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            <color key="tintColor" red="0.94901960784313721" green="0.63137254901960782" blue="0.24313725490196078" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             <connections>
                                 <segue destination="gdm-gZ-kU9" kind="show" id="UbF-wR-Xrr"/>
                             </connections>
