Add to Cart of feature Added

--- a/TechCareerCase/Base.lproj/Main.storyboard
+++ b/TechCareerCase/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
@@ -109,10 +110,125 @@
                     <view key="view" contentMode="scaleToFill" id="qhT-s4-1s6">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="Anb-db-CUS">
+                                <rect key="frame" x="27" y="145" width="360" height="360"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="360" id="1PQ-gu-Zzx"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ls4-kY-ao3">
+                                <rect key="frame" x="155.5" y="533" width="103" height="31"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aBz-m6-a18">
+                                        <rect key="frame" x="0.0" y="0.0" width="44" height="31"/>
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain">
+                                            <imageReference key="image" image="minus.circle" catalog="system" symbolScale="large"/>
+                                        </buttonConfiguration>
+                                        <connections>
+                                            <action selector="minusButton:" destination="ref-lk-zm6" eventType="touchUpInside" id="tDQ-Rn-0P2"/>
+                                        </connections>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="btX-f5-pqb">
+                                        <rect key="frame" x="44" y="0.0" width="15" height="31"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="23"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="neO-q1-IMR">
+                                        <rect key="frame" x="59" y="0.0" width="44" height="31"/>
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain">
+                                            <imageReference key="image" image="plus.circle" catalog="system" symbolScale="large"/>
+                                        </buttonConfiguration>
+                                        <connections>
+                                            <action selector="plusButton:" destination="ref-lk-zm6" eventType="touchUpInside" id="MSG-eV-DXR"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="12"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Yemek Adi" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gQn-KV-1KZ">
+                                <rect key="frame" x="133.5" y="591" width="147" height="36"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" axis="vertical" spacing="-6" translatesAutoresizingMaskIntoConstraints="NO" id="jFc-gh-x3c">
+                                <rect key="frame" x="20" y="785" width="125" height="61"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fiyatı :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="heV-RT-CB7">
+                                        <rect key="frame" x="25" y="4" width="75" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="35 ₺" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xu0-aj-E0C">
+                                        <rect key="frame" x="25" y="16" width="75" height="42"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="35"/>
+                                        <color key="textColor" red="0.94901960784313721" green="0.63137254901960782" blue="0.24313725490196078" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <edgeInsets key="layoutMargins" top="4" left="25" bottom="3" right="25"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="12"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u1M-Tv-lM7">
+                                <rect key="frame" x="158" y="784.5" width="236" height="61.5"/>
+                                <color key="backgroundColor" red="0.94901960784313721" green="0.63137254901960782" blue="0.24313725490196078" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Sepete Ekle">
+                                    <fontDescription key="titleFontDescription" type="system" weight="semibold" pointSize="33"/>
+                                    <directionalEdgeInsets key="contentInsets" top="11" leading="30" bottom="11" trailing="30"/>
+                                </buttonConfiguration>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="12"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="sepeteEkle:" destination="ref-lk-zm6" eventType="touchUpInside" id="MbN-az-yjw"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="nNe-jj-8bS"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Ls4-kY-ao3" firstAttribute="centerX" secondItem="qhT-s4-1s6" secondAttribute="centerX" id="CiC-wg-g3U"/>
+                            <constraint firstItem="Anb-db-CUS" firstAttribute="leading" secondItem="nNe-jj-8bS" secondAttribute="leading" constant="27" id="Ey6-1L-zzv"/>
+                            <constraint firstItem="Ls4-kY-ao3" firstAttribute="top" secondItem="Anb-db-CUS" secondAttribute="bottom" constant="28" id="MYD-EE-86T"/>
+                            <constraint firstItem="gQn-KV-1KZ" firstAttribute="centerX" secondItem="qhT-s4-1s6" secondAttribute="centerX" id="NB8-5m-Ap9"/>
+                            <constraint firstItem="nNe-jj-8bS" firstAttribute="trailing" secondItem="u1M-Tv-lM7" secondAttribute="trailing" constant="20" id="POK-fD-gJ2"/>
+                            <constraint firstItem="Anb-db-CUS" firstAttribute="top" secondItem="nNe-jj-8bS" secondAttribute="top" constant="57" id="VtM-TI-ZXe"/>
+                            <constraint firstItem="nNe-jj-8bS" firstAttribute="bottom" secondItem="jFc-gh-x3c" secondAttribute="bottom" constant="16" id="Xla-Fx-32L"/>
+                            <constraint firstItem="Anb-db-CUS" firstAttribute="centerX" secondItem="qhT-s4-1s6" secondAttribute="centerX" id="bX4-Z2-65k"/>
+                            <constraint firstItem="jFc-gh-x3c" firstAttribute="leading" secondItem="nNe-jj-8bS" secondAttribute="leading" constant="20" id="e9R-kl-GjJ"/>
+                            <constraint firstItem="gQn-KV-1KZ" firstAttribute="top" secondItem="Ls4-kY-ao3" secondAttribute="bottom" constant="27" id="oDZ-4x-49b"/>
+                            <constraint firstItem="nNe-jj-8bS" firstAttribute="bottom" secondItem="u1M-Tv-lM7" secondAttribute="bottom" constant="16" id="zMX-2f-wFj"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Detay" id="OhS-jW-9VB"/>
+                    <connections>
+                        <outlet property="count" destination="btX-f5-pqb" id="l1h-qf-U7u"/>
+                        <outlet property="imagedetay" destination="Anb-db-CUS" id="1EC-ra-5SL"/>
+                        <outlet property="minusButtonOut" destination="aBz-m6-a18" id="Jjf-OB-0O2"/>
+                        <outlet property="yemekdetayAdi" destination="gQn-KV-1KZ" id="PHF-8S-aW1"/>
+                        <outlet property="yemekdetayFiyat" destination="Xu0-aj-E0C" id="5Ak-p2-rfE"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IVH-N5-7sl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -158,6 +274,9 @@
         </scene>
     </scenes>
     <resources>
+        <image name="logo" width="406" height="403"/>
+        <image name="minus.circle" catalog="system" width="128" height="121"/>
+        <image name="plus.circle" catalog="system" width="128" height="121"/>
         <image name="sepet" width="41" height="41"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
