--- a/TechCareerCase/Base.lproj/Main.storyboard
+++ b/TechCareerCase/Base.lproj/Main.storyboard
@@ -241,10 +241,87 @@
                     <view key="view" contentMode="scaleToFill" id="KbW-pF-Zde">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="p0g-tS-X7B">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="sepetHucre" id="bPN-T5-FNx" customClass="TableViewCell" customModule="TechCareerCase" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="100"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="bPN-T5-FNx" id="wyF-Wo-gWA">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="100"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="b2t-ce-REZ">
+                                                    <rect key="frame" x="27" y="0.0" width="100" height="100"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="100" id="N7z-bz-wwy"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="340-Gw-uRj">
+                                                    <rect key="frame" x="142" y="11" width="92" height="65"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="YemekAdi" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Scl-Ym-1PY">
+                                                            <rect key="frame" x="0.0" y="0.0" width="92" height="24"/>
+                                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UrunAdedi" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dpt-4U-qNy">
+                                                            <rect key="frame" x="0.0" y="27" width="92" height="20.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hızlı Teslimat" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m9M-oL-eWO">
+                                                            <rect key="frame" x="0.0" y="50.5" width="92" height="14.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                            <color key="textColor" red="0.1669974789232099" green="0.53193817321850612" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </stackView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="35 ₺" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m6x-ph-sJj">
+                                                    <rect key="frame" x="357" y="55.5" width="37" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                    <color key="textColor" red="0.94901960784313721" green="0.63137254901960782" blue="0.24313725490196078" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottomMargin" secondItem="m6x-ph-sJj" secondAttribute="bottom" constant="13" id="7zA-Wk-Zjx"/>
+                                                <constraint firstAttribute="bottom" secondItem="b2t-ce-REZ" secondAttribute="bottom" id="S2g-cW-fs4"/>
+                                                <constraint firstItem="b2t-ce-REZ" firstAttribute="leading" secondItem="wyF-Wo-gWA" secondAttribute="leading" constant="27" id="TeM-18-oYx"/>
+                                                <constraint firstItem="m6x-ph-sJj" firstAttribute="trailing" secondItem="wyF-Wo-gWA" secondAttribute="trailingMargin" id="UeP-Je-ZxO"/>
+                                                <constraint firstItem="b2t-ce-REZ" firstAttribute="top" secondItem="wyF-Wo-gWA" secondAttribute="top" id="csg-CV-W2Q"/>
+                                                <constraint firstItem="340-Gw-uRj" firstAttribute="leading" secondItem="b2t-ce-REZ" secondAttribute="trailing" constant="15" id="jVx-gG-Cxc"/>
+                                                <constraint firstItem="340-Gw-uRj" firstAttribute="top" secondItem="wyF-Wo-gWA" secondAttribute="topMargin" id="lgY-gL-rft"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="sepetImage" destination="b2t-ce-REZ" id="eHU-UL-bUK"/>
+                                            <outlet property="sepetUrunFiyat" destination="m6x-ph-sJj" id="P7r-kn-fzs"/>
+                                            <outlet property="sepetUrunadet" destination="dpt-4U-qNy" id="oG8-hh-Ksr"/>
+                                            <outlet property="sepetYemekAdi" destination="Scl-Ym-1PY" id="fKv-UD-5y7"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="LS8-HQ-ohR"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="LS8-HQ-ohR" firstAttribute="trailing" secondItem="p0g-tS-X7B" secondAttribute="trailing" id="C5u-sq-PYQ"/>
+                            <constraint firstItem="p0g-tS-X7B" firstAttribute="leading" secondItem="LS8-HQ-ohR" secondAttribute="leading" id="Ndb-ST-4cv"/>
+                            <constraint firstItem="LS8-HQ-ohR" firstAttribute="bottom" secondItem="p0g-tS-X7B" secondAttribute="bottom" id="kEO-BW-Ylc"/>
+                            <constraint firstItem="p0g-tS-X7B" firstAttribute="top" secondItem="LS8-HQ-ohR" secondAttribute="top" id="zfK-KN-qEr"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Sepetim" id="jH6-0j-RAz"/>
+                    <connections>
+                        <outlet property="sepetTableView" destination="p0g-tS-X7B" id="Z7L-ex-0dO"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uRy-0T-RdY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
