--- a/TechCareerCase/Base.lproj/Main.storyboard
+++ b/TechCareerCase/Base.lproj/Main.storyboard
@@ -243,7 +243,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="p0g-tS-X7B">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="724"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="sepetHucre" id="bPN-T5-FNx" customClass="TableViewCell" customModule="TechCareerCase" customModuleProvider="target">
@@ -308,19 +308,46 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <stackView opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" axis="vertical" spacing="-6" translatesAutoresizingMaskIntoConstraints="NO" id="dmI-J0-AM0">
+                                <rect key="frame" x="259" y="812" width="125" height="58"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Toplam :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O8N-r8-6l2">
+                                        <rect key="frame" x="25" y="4" width="75" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="35 ₺" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="65F-QX-ohO">
+                                        <rect key="frame" x="25" y="16" width="75" height="42"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="35"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.94901960780000005" green="0.63137254899999995" blue="0.24313725489999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <edgeInsets key="layoutMargins" top="4" left="25" bottom="0.0" right="25"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="12"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="LS8-HQ-ohR"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="LS8-HQ-ohR" firstAttribute="trailing" secondItem="p0g-tS-X7B" secondAttribute="trailing" id="C5u-sq-PYQ"/>
                             <constraint firstItem="p0g-tS-X7B" firstAttribute="leading" secondItem="LS8-HQ-ohR" secondAttribute="leading" id="Ndb-ST-4cv"/>
-                            <constraint firstItem="LS8-HQ-ohR" firstAttribute="bottom" secondItem="p0g-tS-X7B" secondAttribute="bottom" id="kEO-BW-Ylc"/>
+                            <constraint firstItem="dmI-J0-AM0" firstAttribute="top" secondItem="p0g-tS-X7B" secondAttribute="bottom" id="ejt-Fm-yir"/>
+                            <constraint firstItem="LS8-HQ-ohR" firstAttribute="trailing" secondItem="dmI-J0-AM0" secondAttribute="trailing" constant="30" id="hXz-1o-PFH"/>
+                            <constraint firstItem="LS8-HQ-ohR" firstAttribute="bottom" secondItem="p0g-tS-X7B" secondAttribute="bottom" constant="50" id="kEO-BW-Ylc"/>
                             <constraint firstItem="p0g-tS-X7B" firstAttribute="top" secondItem="LS8-HQ-ohR" secondAttribute="top" id="zfK-KN-qEr"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Sepetim" id="jH6-0j-RAz"/>
                     <connections>
                         <outlet property="sepetTableView" destination="p0g-tS-X7B" id="Z7L-ex-0dO"/>
+                        <outlet property="toplamFiyat" destination="65F-QX-ohO" id="VXR-Xb-WGB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uRy-0T-RdY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
